--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@
 
 * {
   box-sizing: border-box;
+  font-size: 14px;
+  line-height: 1.5;
 }
 
 :root {
@@ -11,7 +13,7 @@
   --color-border: rgba(70, 163, 89, 0.35);
   --color-gray: #333333;
   --color-light-gray: #8e8e8e;
-  --color-bg: rgb(251, 251, 251);
+  --color-bg: rgb(244, 244, 244);
   --shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
