--- a/src/components/Button/style.module.css
+++ b/src/components/Button/style.module.css
@@ -12,7 +12,7 @@
 }
 
 .button:hover {
-    box-shadow: var(--shadow);
+    /* box-shadow: var(--shadow); */
     background-color: #fff;
     color: var(--color-green);
     border: 1px solid var(--color-green);
