--- a/src/components/ProductItem/style.module.css
+++ b/src/components/ProductItem/style.module.css
@@ -1,3 +1,7 @@
+.container {
+    position: relative;
+}
+
 .container a {
     text-decoration: none;
     color: var(--color-gray);
@@ -44,7 +48,7 @@
 }
 
 .title {
-    margin: 0 0 20px;
+    margin: 0 0 10px;
     padding: 20px 20px 0;
     flex: 1 1 0;
     font-weight: 500;
@@ -71,4 +75,12 @@
 .old_price {
     color: var(--color-light-gray);
     text-decoration: line-through;
+}
+
+.btns_wrap {
+    display: none;
+}
+
+.container:hover .btns_wrap {
+    display: block;
 }
