--- a/src/components/Features/style.module.css
+++ b/src/components/Features/style.module.css
@@ -12,3 +12,19 @@
     color: var(--color-light-gray);
     font-size: 0.8rem;
 }
+
+@media (max-width: 768px) {
+
+    .features {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        justify-items: center;
+
+    }
+
+    .features div {
+        width: 100%
+    }
+
+
+}
