--- a/src/components/Header/style.module.css
+++ b/src/components/Header/style.module.css
@@ -8,6 +8,7 @@ header {
     align-items: center;
     gap: 10px;
     padding: 15px 0;
+    position: relative;
 }
 
 .logo_container {
@@ -16,39 +17,8 @@ header {
     gap: 10px;
 }
 
-.nav {
-    display: flex;
-    gap: 15px;
-}
-
-.nav a {
-    text-decoration: none;
-    color: var(--color-text);
-    padding: 10px;
-    position: relative;
-}
-
-.nav a::before {
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    height: 1.5px;
-    width: 100%;
-    background-color: var(--color-green);
-    transform: scale(0);
-    transition: all ease 0.4s;
-}
-
-.nav a:hover::before {
-    transform: scale(1);
-}
-
-.nav .active {
-    color: var(--color-green);
-}
-
 .icons {
+    position: relative;
     display: flex;
     gap: 10px;
     align-items: center;
@@ -61,4 +31,32 @@ header {
 
 .icons svg:hover {
     fill: var(--color-green);
+}
+
+.quantity {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    background-color: var(--color-green);
+    color: #fff;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    font-size: 0.75rem;
+    right: -10px;
+    bottom: -15px;
+}
+
+.menu_icon {
+    display: none;
+}
+
+@media (max-width: 768px) {
+
+    .menu_icon {
+        display: block;
+        margin-right: 10px;
+    }
+
 }
