--- a/src/components/ProductsFilterBar/style.module.css
+++ b/src/components/ProductsFilterBar/style.module.css
@@ -82,3 +82,133 @@
     display: flex;
     align-items: center;
 }
+
+.mob_sidebar {
+    display: none;
+}
+
+.filters_btn {
+    display: none;
+}
+
+.filter_backdrop {
+    display: none;
+}
+
+.active_filters {
+    display: none;
+}
+
+@media (max-width: 1023px) {
+    .mob_sidebar {
+        display: block;
+    }
+
+
+    .filters_btn {
+        display: block;
+        grid-column: -1 / 1;
+    }
+
+    .active_filters {
+        display: block;
+        grid-column: -1 / 1;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px 20px;
+        color: var(--color-light-gray);
+    }
+
+    .active_filters p {
+        margin: 0;
+        padding: 5px;
+        background-color: var(--color-bg);
+        border-radius: 7px;
+        font-size: 0.75rem;
+    }
+
+    .bold, .bold_def {
+        font-size: 0.75rem;
+        font-weight: 600;
+        position: relative;
+    }
+
+    .bold::after {
+        content: 'x';
+        position: absolute;
+        width: 15px;
+        height: 15px;
+        background-color: var(--color-light-gray);
+        color: #fff;
+        text-align: center;
+        border-radius: 50%;
+        top: -10px;
+    }
+
+    .filter_bar {
+        overflow: auto;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        max-width: 260px;
+
+        background-color: var(--color-bg);
+        padding: 20px;
+        transform: translateX(-100%);
+        transition: transform 0.3s ease-in-out;
+        z-index: 200;
+
+        flex-direction: column;
+        gap: 10px;
+        border-radius: 0;
+    }
+
+    .filter_bar.open {
+        transform: translateX(0);
+    }
+
+    .filter_backdrop {
+        display: block;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 199;
+        animation: fadeIn 0.3s;
+        transform: translateX(100%);
+    }
+
+    .filter_backdrop.open {
+        transform: translateX(0%);
+    }
+
+    .price_field {
+        flex-direction: column;
+        gap: 10px;
+        width: 100%;
+    }
+
+    .price_input_wrap {
+        width: 100%;
+    }
+
+    .price_input_wrap input {
+        width: 100%;
+    }
+
+    .search_input {
+        width: 100%;
+    }
+
+    .select {
+        width: 100%;
+    }
+
+}
