--- a/src/components/MainCategories/style.module.css
+++ b/src/components/MainCategories/style.module.css
@@ -19,66 +19,17 @@
     justify-content: space-between;
 }
 
-.categories > div {
+.categories>div {
     width: 25%;
 }
 
 
-/* 
-.category {
-    position: relative;
-    width: 25%;
-    height: 100%;
-    cursor: pointer;
-}
+@media (max-width: 768px) {
+    .categories {
+        flex-direction: column;
+    }
 
-.img_wrap {
-    height: 250px;
+    .categories>div {
+        width: 100%;
+    }
 }
-
-.title {
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: rgba(0, 0, 0, 0.537);
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    font-weight: 600;
-}
-
-.title p {
-    margin: 0;
-    text-transform: uppercase;
-    position: relative;
-}
-
-.category img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    transition: all 0.5s ease;
-}
-
-.category:hover img {
-    box-shadow: var(--shadow);
-}
-
-p::before {
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: -10px;
-    height: 1.5px;
-    width: 100%;
-    background-color: #fff;
-    transform: scale(0);
-    transition: all ease 0.4s;
-}
-
-.category:hover p::before {
-    transform: scale(1);
-} */
