--- a/src/components/Sidebar/style.module.css
+++ b/src/components/Sidebar/style.module.css
@@ -46,3 +46,10 @@
     padding: 5px 10px;
     font-weight: 600;
 }
+
+
+@media (max-width: 1023px) {
+    .sidebar {
+        padding: 0;
+    }
+}
