--- a/src/pages/ProductsPage/style.module.css
+++ b/src/pages/ProductsPage/style.module.css
@@ -17,3 +17,13 @@ main h1 {
     width: calc(100% - 220px);
     grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
 }
+
+@media (max-width: 1023px) {
+    .products {
+        width: 100%;
+    }
+    
+    .desktop_aside {
+        display: none;
+    }
+}
