--- a/src/components/ProductsFilterBar/style.module.css
+++ b/src/components/ProductsFilterBar/style.module.css
@@ -102,8 +102,8 @@
 @media (max-width: 1023px) {
     .mob_sidebar {
         display: block;
+        overflow: auto;
     }
-
 
     .filters_btn {
         display: block;
