--- a/src/components/ThanksForOrderModal/style.module.css
+++ b/src/components/ThanksForOrderModal/style.module.css
@@ -50,3 +50,15 @@
         opacity: 1;
     }
 }
+
+@media (max-width: 426px) {
+    .modal_content p {
+        font-size: 1.5rem;
+    }
+}
+
+@media (max-width: 375px) {
+    .modal_content p {
+        font-size: 1.2rem;
+    }
+}
