--- a/src/pages/BasketPage/style.module.css
+++ b/src/pages/BasketPage/style.module.css
@@ -42,3 +42,13 @@
 .empty {
     min-height: 400px;
 }
+
+@media (max-width: 1023px) {
+    .basket {
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+    }
+}
+
+@media (max-width: 767px) {}
