--- a/src/components/Footer/style.module.css
+++ b/src/components/Footer/style.module.css
@@ -26,7 +26,7 @@ footer {
 .block {
     display: flex;
     align-items: center;
-    justify-content: start;
+    justify-content: flex-start;
     gap: 20px;
     color: var(--color-light-gray);
 
