--- a/src/components/ProductsFilterBar/style.module.css
+++ b/src/components/ProductsFilterBar/style.module.css
@@ -127,7 +127,8 @@
         font-size: 0.75rem;
     }
 
-    .bold, .bold_def {
+    .bold,
+    .bold_def {
         font-size: 0.75rem;
         font-weight: 600;
         position: relative;
@@ -157,7 +158,7 @@
         background-color: var(--color-bg);
         padding: 20px;
         transform: translateX(-100%);
-        transition: transform 0.3s ease-in-out;
+        transition: transform 0.5s ease-in-out;
         z-index: 200;
 
         flex-direction: column;
@@ -170,7 +171,6 @@
     }
 
     .filter_backdrop {
-        display: block;
         position: fixed;
         top: 0;
         left: 0;
@@ -181,12 +181,14 @@
         justify-content: center;
         align-items: center;
         z-index: 199;
-        animation: fadeIn 0.3s;
-        transform: translateX(100%);
+        opacity: 0;
+        transition: opacity 0.5s ease-in-out;
+        pointer-events: none;
     }
 
     .filter_backdrop.open {
-        transform: translateX(0%);
+        opacity: 1;
+        pointer-events: auto;
     }
 
     .price_field {
